Shaved some moustaches

--- a/src/classes/FiscalYearUtils.cls
+++ b/src/classes/FiscalYearUtils.cls
@@ -4,9 +4,7 @@ public class FiscalYearUtils {
     }
 
     public static Integer getFiscalYear(Date dt) {
-        if(dt == null) {
-            throw new DateException('Date is required');
-        }
+        if(dt == null) throw new DateException('Date is required');
 
         Integer currentFY;
         List<FiscalYearSettings> fiscalYearSettings = [
@@ -16,11 +14,8 @@ public class FiscalYearUtils {
             AND EndDate >= TODAY
         ];
 
-        if(fiscalYearSettings.isEmpty()) {
-            currentFY = System.today().year();
-        } else {
-            currentFY = Integer.valueOf(fiscalYearSettings[0].Name);
-        }
+        if(fiscalYearSettings.isEmpty()) currentFY = System.today().year();
+        else currentFY = Integer.valueOf(fiscalYearSettings[0].Name);
 
         return currentFY;
     }
